Adds more models to the music testing script.

--- a/examples/music.ipynb
+++ b/examples/music.ipynb
@@ -42,8 +42,13 @@
     "from source.languagemodel import LanguageModel\n",
     "import note_seq\n",
     "\n",
+    "# Select a model to load.\n",
+    "#model_path_or_repo = \"TristanBehrens/jsfakes-music-transformer\"\n",
+    "#model_path_or_repo = \"TristanBehrens/jsfakes-music-pharia\"\n",
+    "#model_path_or_repo = \"TristanBehrens/jsfakes-music-mamba\"\n",
     "model_path_or_repo = \"TristanBehrens/jsfakes-music-xlstm\"\n",
     "\n",
+    "# Load the model.\n",
     "model = LanguageModel(\n",
     "    model_path_or_repo,\n",
     "    config_overrides={\"context_length\": 16_384},\n",
@@ -183,10 +188,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Generate music"
    ]
