Adds Mamba Plus. Adds more checkpoints to music example.

--- a/examples/music.ipynb
+++ b/examples/music.ipynb
@@ -46,7 +46,13 @@
     "#model_path_or_repo = \"TristanBehrens/jsfakes-music-transformer\"\n",
     "#model_path_or_repo = \"TristanBehrens/jsfakes-music-pharia\"\n",
     "#model_path_or_repo = \"TristanBehrens/jsfakes-music-mamba\"\n",
-    "model_path_or_repo = \"TristanBehrens/jsfakes-music-xlstm\"\n",
+    "#model_path_or_repo = \"TristanBehrens/jsfakes-music-xlstm\"\n",
+    "#model_path_or_repo = \"TristanBehrens/bach-garland-transformer\"\n",
+    "#model_path_or_repo = \"TristanBehrens/bach-garland-pharia\"\n",
+    "#model_path_or_repo = \"TristanBehrens/bach-garland-mamba\"\n",
+    "#model_path_or_repo = \"TristanBehrens/bach-garland-xlstm\"\n",
+    "model_path_or_repo = \"TristanBehrens/bach-garland-mambaplus\"\n",
+    "\n",
     "\n",
     "# Load the model.\n",
     "model = LanguageModel(\n",
